Ajout des membres au README